# ViewFramework

./: .gitignore  CMakeLists.txt  README.md
3p/: sdk_versions.cmake
CViewFramework/: CMakeLists.txt  CViewFramework.cpp  CViewFramework.h
NfdcAppCore/: AdWsMngr.cpp  AdWsMngr.h  AppButtonView.cpp  AppButtonView.h  AppCommand.cpp  AppCommand.h  AppController.cpp  AppController.h  AppEvents.cpp  AppEvents.h  AppModeView.cpp  AppModeView.h  AppModel.cpp  AppModel.h  AppModelObjects.cpp  AppModelObjects.h  AppStyle.cpp  AppStyle.h  AppView.cpp  AppView.h  Application.cpp  Application.h  ApplyQssCommand.cpp  ApplyQssCommand.h  AttributesCommands.cpp  BaseDialog.cpp  BaseDialog.h  BoundingBox.cpp  BoundingBox.h  BrowserTree.cpp  BrowserTree.h  BrowserTreeCommand.cpp  BrowserTreeCommand.h  BrowserTreeItem.cpp  BrowserTreeItem.h  BrowserTreeItemParent.cpp  BrowserTreeItemParent.h  BrowserTreeItemWidget.cpp  BrowserTreeItemWidget.h  BrowserView.cpp  (+148 more)
NfdcAppCore/CommonWidgets/: ProgressDialog.cpp  ProgressDialog.h  Switches.cpp  Switches.h
NfdcAppCore/resources/: resources.qrc
NfdcModPlayground/: CMakeLists.txt  DemoDialog.cpp  DemoDialog.h  DummyCommand.cpp  DummyCommand.h  DummyObject.cpp  DummyObject.h  DummyRequest.cpp  DummyRequest.h  DummyTreeFactory.cpp  DummyTreeFactory.h  DummyViewFactory.cpp  DummyViewFactory.h  Module.cpp  Module.h  RibbonExampleCommand.cpp  RibbonExampleCommand.h  WebEngineViewCommands.cpp  WebEngineViewCommands.h  stdafx.h
NfdcModPlayground/resources/: resources.qrc
cmake/: 3rdparty_Locator.cmake  Qt_Locator.cmake  sdk_versions.cmake
common/: CMakeLists.txt
common/SimGeometry/: BoundingBox.cpp  BoundingBox.h  ExportGeometry.h  IBoundingBoxElement.h  Maths.h  Matrix.h  Matrix22.h  Matrix33.h  Matrix44.h  MatrixAffine2.h  MatrixAlgo.h  OctanTree.cpp  OctanTree.h  OctanTreeNode.cpp  OctanTreeNode.h  Vector.h  _res_module_name.h  stdafx.cpp  stdafx.h
common/SimObjectStore/: AccessModifiers.cpp  AccessModifiers.h  AccessScope.h  BucketedVector.h  CreationScope.h  FileIO.h  Object.cpp  Object.h  ObjectId.cpp  ObjectId.h  ObjectIdIterator.cpp  ObjectIdIterator.h  ObjectIdIteratorImpl.cpp  ObjectIdIteratorImpl.h  ObjectIdReference.cpp  ObjectIdReference.h  ObjectStore.cpp  ObjectStore.h  ObjectStub.cpp  ObjectStub.h  ObjectStubAccessQueue.cpp  ObjectStubAccessQueue.h  ObjectStubDefs.h  Serialization.cpp  Serialization.h  Storage.cpp  Storage.h  StorageIndex.h  Synchronization.h  _res_module_name.h  stdafx.h
common/SimPatterns/: CMakeLists.txt  CommandBase.cpp  CommandBase.h  CommandEvents.cpp  CommandEvents.h  Event.cpp  Event.h  EventSwitch.cpp  EventSwitch.h  MVCBase.h  MVCController.cpp  MVCController.h  MVCModel.cpp  MVCModel.h  MVCView.cpp  MVCView.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  RequestBase.cpp  RequestBase.h  _res_module_name.h  stdafx.cpp  stdafx.h
common/SimUnits/: CMakeLists.txt  Unit.cpp  Unit.h  UnitGroup.cpp  UnitGroup.h  UnitSymbols.cpp  UnitSymbols.h  Units.cpp  Units.h  _res_module_name.h  stdafx.h
common/SimUnits/SyntaxProcessor/: CMakeLists_.txt  SyntaxProcessor.cpp  SyntaxProcessor.h  Utils.cpp  Utils.h
common/SimUnits/SyntaxProcessor/ArithmeticExpression/: BinaryTreeBuilder.cpp  BinaryTreeBuilder.h  Node.cpp  Node.h  Tokenizer.cpp  Tokenizer.h
common/SimVtkExt/: CMakeLists.txt  export.h  stdafx.h  vtkExtSimCellPicker.cpp  vtkExtSimCellPicker.h  vtkExtSimExtractSelectedFrustum.cpp  vtkExtSimExtractSelectedFrustum.h  vtkExtSimInteractorStyleAutoCAM.cpp  vtkExtSimInteractorStyleAutoCAM.h  vtkExtSimOpenGLPolyDataMapper.cpp  vtkExtSimOpenGLPolyDataMapper.h  vtkExtSimOpenGLVertexBufferObject.cpp  vtkExtSimOpenGLVertexBufferObject.h  vtkExtSimPointPicker.cpp  vtkExtSimPointPicker.h  vtkExtSimValuePassHelper.cpp  vtkExtSimValuePassHelper.h
common/headers/: Comparers.h  Epsilon.h  Iterators.h  MathUtils.h  ObjectId.h  ResultTypes.h  TextUtils.h  TypeId.h  UnitTypes.h  WarningSuppression.h  dbg_TimeProfiler.h  dbg_vtk.cpp  traits_utils.h
common/headers/AppInterfaces/: IApplication.h  ICommandRegistry.h  IInfoCenter.h  IRibbon.h  ISSO.h  ITreeFactoryRegistry.h  IViewFactoryRegistry.h
common/headers/AppModules/: AppModuleDefs.h  AppModuleImp.h  AppModuleLoader.h  IAppModule.h
common/headers/CrtDestroy/: v110.h
common/headers/MetaInfo/: MetaInfo.h  MetaInfoDef.h  Properties.h  PropertiesExtData.h  PropertyAccessor.h  PropertyIntersection.h  PropertySet.h
common/headers/VersionInfo/: _build_no.h  _res_ver.h
common/headers/ipc/: circular_buffer.h  pipeline.h  pipeline_link.h  shared_memory_buffer_devices.h  shared_memory_container.h  shared_memory_counter.h  shared_memory_pipeline.h  shared_memory_state_machine.h
common/headers/serialization/: collections_load_imp_move.h
